=head1 NAME

Changes - Apache mod_perl change logfile

=head1 CHANGES

=over 3

=item 1.15_01-dev

PerlCleanupHandler is now run by a register_cleanup(), rather than an
alias for PerlLogHandler 

get rid of warning in Apache::RedirectLogFix [Brian Moseley <ix@maz.org>]

added $r->internal_redirect method

Apache::TieHashTable class enhancements:

 -get() in list context will return all values found for the given key
 -merge() and add() will accept an array reference of values
 -new method do()

add -DMOD_PERL to apaci/configure for USE_APXS=1
[Andrea Borgia <bab0069@iperbole.bologna.it>]

set LD_RUN_PATH in Makefile.PL [Tom Hughes <tom@compton.demon.co.uk>]

add =pod config support for '={begin,for} apache ... =end apache'

move mod_perl_cleanup_av outside of #ifdef PERL_DIRECTIVE_HANDLERS to
cure compile problem spotted by David-Michael Lincke

Fixed problem with 'POST' requests when using Apache::Include
[Doug Bagley <doug@dejanews.com>]

make $r->connection->remote_ip set-able [Doug Bagley <doug@dejanews.com>]

new experimental options PERL_SAFE_STARTUP and PERL_DEFAULT_OPMASK
when httpd is starting, opcodes will be disabled during PerlModule,
PerlRequire and <Perl></Perl>
 
 -PERL_SAFE_STARTUP=1 enables PerlOpmask directive
   if PerlOpmask is "default", use mask generated from src/opcodes.txt
   else it's a file to create the mask in the format of src/opcodes.txt
   if no PerlOpmask, no opcodes are disabled
 - 'make update_op_mask OPCODE_FILE=my_opcodes.txt && make'
   changes the default opmask generated from OPCODE_FILE
 -PERL_DEFAULT_OPMASK=1 disables PerlOpmask directive, forces default
   opmask on
 -PERL_ORALL_OPMASK=1 enables $r->set_opmask method for per-directory masks
 -new module Apache::Opcode for generating op_mask

Fixed Apache::Util::ht_time test (util.t) so it doesn't fail without
any reason

added $r->finfo method

Apache::Connection and Apache::Server will not be loaded by default if
a PerlRequire file says: no mod_perl qw(Connection Server);